--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
 <meta name="description" content="This is where Ao28th28 does his coding projects"/>
 <style type="text/css">
 body {
-	background-color: #5a9cff
+		background-image: url("/oldprodigy/images/Background.png");
+		background-attachment: fixed;
+		background-repeat: no-repeat;
+		background-size: cover;
+		background-position: center center;
+		margin: auto;
+		height: 100%;
+		background-color: #55B9A7;
 }
 
 .title {
