--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta name="description" content="This is where Ao28th28 does his coding projects"/>
 <style type="text/css">
 body {
-		background-image: url("/oldprodigy/images/Background.png");
+		background-image: url("/pvz-beta.site/images/Background.png");
 		background-attachment: fixed;
 		background-repeat: no-repeat;
 		background-size: cover;
