--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-<title>Harder than PVZ Hard Mode Mod</title>
+<title>Harder than PVZ Hard Mode Mod plus a way back to Old Prodigy?!</title>
 <meta name="description" content="This is where Ao28th28 does his coding projects"/>
 <style type="text/css">
 body {
@@ -29,3 +29,11 @@ body {
 <button onclick="window.location.href='https://github.com/Ao28th28/pvz-beta.site/blob/main/README.md'" id="https://github.com/Ao28th28/pvz-beta.site/blob/main/README.md" style="background: linear-gradient(rgb(85, 186, 151), rgb(69, 143, 130)); border: 1px solid rgb(65, 141, 168); border-radius: 11px; padding: 20px 30px; color: rgb(255, 255, 255); display: inline-block; font: 26px / 1 &quot;Open Sans&quot;, sans-serif; text-align: center; text-shadow: rgb(0, 0, 0) 1px 1px;">PVZ Beta modified</button>
 </div>
 </html>
+
+<body class="title">
+<div align="center">Old Prodigy
+</div>
+<div align="center" style="position: relative; top: 20px">
+<button onclick="window.location.href='https://ao28th28.github.io/oldprodigy.com/'" id="https://ao28th28.github.io/oldprodigy.com/" style="background: linear-gradient(rgb(85, 186, 151), rgb(69, 143, 130)); border: 1px solid rgb(65, 141, 168); border-radius: 11px; padding: 20px 30px; color: rgb(255, 255, 255); display: inline-block; font: 26px / 1 &quot;Open Sans&quot;, sans-serif; text-align: center; text-shadow: rgb(0, 0, 0) 1px 1px;">Old Prodigy</button>
+</div>
+</html>	
