--- a/index.html
+++ b/index.html
@@ -34,6 +34,6 @@ body {
 <div align="center">Old Prodigy
 </div>
 <div align="center" style="position: relative; top: 40px">
-<button onclick="window.location.href='https://ao28th28.github.io/oldprodigy.com/'" id="https://ao28th28.github.io/oldprodigy.com/" style="background: linear-gradient(rgb(85, 186, 151), rgb(69, 143, 130)); border: 1px solid rgb(65, 141, 168); border-radius: 11px; padding: 20px 30px; color: rgb(255, 255, 255); display: inline-block; font: 26px / 1 &quot;Open Sans&quot;, sans-serif; text-align: center; text-shadow: rgb(0, 0, 0) 1px 1px;">Old Prodigy</button>
+<button onclick="window.location.href='https://ao28th28.github.io/pickles/'" id="https://ao28th28.github.io/pickles/" style="background: linear-gradient(rgb(85, 186, 151), rgb(69, 143, 130)); border: 1px solid rgb(65, 141, 168); border-radius: 11px; padding: 20px 30px; color: rgb(255, 255, 255); display: inline-block; font: 26px / 1 &quot;Open Sans&quot;, sans-serif; text-align: center; text-shadow: rgb(0, 0, 0) 1px 1px;">Old Prodigy</button>
 </div>
 </html>	
