--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta name="description" content=""/>
 <style type="text/css">
 body {
-		background-image: url("/pvz-beta.site/images/Background.png");
+		background-image: url("https://xpmuser.github.io/oldprodigy/select/images/Background-1.png");
 		background-attachment: fixed;
 		background-repeat: no-repeat;
 		background-size: cover;
@@ -34,6 +34,14 @@ body {
 <div align="center">Old Prodigy
 </div>
 <div align="center" style="position: relative; top: 40px">
-<button onclick="window.location.href='https://ao28th28.github.io/pickles/'" id="https://ao28th28.github.io/pickles/" style="background: linear-gradient(rgb(85, 186, 151), rgb(69, 143, 130)); border: 1px solid rgb(65, 141, 168); border-radius: 11px; padding: 20px 30px; color: rgb(255, 255, 255); display: inline-block; font: 26px / 1 &quot;Open Sans&quot;, sans-serif; text-align: center; text-shadow: rgb(0, 0, 0) 1px 1px;">Old Prodigy</button>
+<button onclick="window.location.href='https://xpmuser.github.io/'" id="https://ao28th28.github.io/" style="background: linear-gradient(rgb(85, 186, 151), rgb(69, 143, 130)); border: 1px solid rgb(65, 141, 168); border-radius: 11px; padding: 20px 30px; color: rgb(255, 255, 255); display: inline-block; font: 26px / 1 &quot;Open Sans&quot;, sans-serif; text-align: center; text-shadow: rgb(0, 0, 0) 1px 1px;">Old Prodigy</button>
+</div>
+</html>	
+
+<body class="title">
+<div align="center">More Games
+</div>
+<div align="center" style="position: relative; top: 40px">
+<button onclick="window.location.href='https://gamejolt.com/games/OPPVZ/865144/'" id="https://gamejolt.com/games/OPPVZ/865144/" style="background: linear-gradient(rgb(85, 186, 151), rgb(69, 143, 130)); border: 1px solid rgb(65, 141, 168); border-radius: 11px; padding: 20px 30px; color: rgb(255, 255, 255); display: inline-block; font: 26px / 1 &quot;Open Sans&quot;, sans-serif; text-align: center; text-shadow: rgb(0, 0, 0) 1px 1px;">More Games</button>
 </div>
 </html>	
