--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ body {
 }
 
 .title {
-	font-family: Tahoma, Geneva, sans-serif;
+	font-family: BrianneTod, BrianneTod, sans-serif;
 	font-size: 50px
 }
 
