--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ body {
 }
 
 .title {
-	font-family: BrianneTod, BrianneTod, sans-serif;
+	font-family: BrianneTod, BrianneTod, BrianneTod;
 	font-size: 50px
 }
 
@@ -23,25 +23,25 @@ body {
 </head>
 
 <body class="title">
-<div align="center">PBM
+<div align="center">
 </div>
 <div align="center" style="position: relative; top: 20px">
-<button onclick="window.location.href='https://github.com/Ao28th28/pvz-beta.site/blob/main/README.md'" id="https://github.com/Ao28th28/pvz-beta.site/blob/main/README.md" style="background: linear-gradient(rgb(85, 186, 151), rgb(69, 143, 130)); border: 1px solid rgb(65, 141, 168); border-radius: 11px; padding: 20px 30px; color: rgb(255, 255, 255); display: inline-block; font: 26px / 1 &quot;Open Sans&quot;, sans-serif; text-align: center; text-shadow: rgb(0, 0, 0) 1px 1px;">PVZ Beta modified</button>
+<button onclick="window.location.href='https://github.com/Ao28th28/pvz-beta.site/blob/main/README.md'" id="https://github.com/Ao28th28/pvz-beta.site/blob/main/README.md" style="background: linear-gradient(rgb(85, 186, 151), rgb(69, 143, 130)); border: 1px solid rgb(65, 141, 168); border-radius: 11px; padding: 20px 30px; color: rgb(255, 255, 255); display: inline-block; font: 26px / 1 &quot;Open Sans&quot;, BrianneTod; text-align: center; text-shadow: rgb(0, 0, 0) 1px 1px;">PVZ Beta modified</button>
 </div>
 </html>
 
 <body class="title">
-<div align="center">Old Prodigy
+<div align="center">
 </div>
 <div align="center" style="position: relative; top: 40px">
-<button onclick="window.location.href='https://xpmuser.github.io/'" id="https://ao28th28.github.io/" style="background: linear-gradient(rgb(85, 186, 151), rgb(69, 143, 130)); border: 1px solid rgb(65, 141, 168); border-radius: 11px; padding: 20px 30px; color: rgb(255, 255, 255); display: inline-block; font: 26px / 1 &quot;Open Sans&quot;, sans-serif; text-align: center; text-shadow: rgb(0, 0, 0) 1px 1px;">Old Prodigy</button>
+<button onclick="window.location.href='https://xpmuser.github.io/'" id="https://ao28th28.github.io/" style="background: linear-gradient(rgb(85, 186, 151), rgb(69, 143, 130)); border: 1px solid rgb(65, 141, 168); border-radius: 11px; padding: 20px 30px; color: rgb(255, 255, 255); display: inline-block; font: 26px / 1 &quot;Open Sans&quot;, BrianneTod; text-align: center; text-shadow: rgb(0, 0, 0) 1px 1px;">Old Prodigy</button>
 </div>
 </html>	
 
 <body class="title">
-<div align="center">More Games
+<div align="center">
 </div>
 <div align="center" style="position: relative; top: 60px">
-<button onclick="window.location.href='https://gamejolt.com/games/OPPVZ/865144/'" id="https://gamejolt.com/games/OPPVZ/865144/" style="background: linear-gradient(rgb(85, 186, 151), rgb(69, 143, 130)); border: 1px solid rgb(65, 141, 168); border-radius: 11px; padding: 20px 30px; color: rgb(255, 255, 255); display: inline-block; font: 26px / 1 &quot;Open Sans&quot;, sans-serif; text-align: center; text-shadow: rgb(0, 0, 0) 1px 1px;">More Games</button>
+<button onclick="window.location.href='https://gamejolt.com/games/OPPVZ/865144/'" id="https://gamejolt.com/games/OPPVZ/865144/" style="background: linear-gradient(rgb(85, 186, 151), rgb(69, 143, 130)); border: 1px solid rgb(65, 141, 168); border-radius: 11px; padding: 20px 30px; color: rgb(255, 255, 255); display: inline-block; font: 26px / 1 &quot;Open Sans&quot;, BrianneTod; text-align: center; text-shadow: rgb(0, 0, 0) 1px 1px;">More Games</button>
 </div>
 </html>	
