--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ body {
 <div align="center">
 </div>
 <div align="center" style="position: relative; top: 20px">
-<button onclick="window.location.href='https://github.com/Ao28th28/pvz-beta.site/blob/main/README.md'" id="https://github.com/Ao28th28/pvz-beta.site/blob/main/README.md" style="background: linear-gradient(rgb(85, 186, 151), rgb(69, 143, 130)); border: 1px solid rgb(65, 141, 168); border-radius: 11px; padding: 20px 30px; color: rgb(255, 255, 255); display: inline-block; font: 26px / 1 &quot;Open Sans&quot;, BrianneTod; text-align: center; text-shadow: rgb(0, 0, 0) 1px 1px;">PVZ Beta modified</button>
+<button onclick="window.location.href='https://github.com/Ao28th28/pvz-beta.site/blob/main/README.md'" id="https://github.com/Ao28th28/pvz-beta.site/blob/main/README.md" style="background: linear-gradient(rgb(85, 186, 151), rgb(69, 143, 130)); border: 1px solid rgb(65, 141, 168); border-radius: 11px; padding: 20px 30px; color: rgb(255, 255, 255); display: inline-block; font: 26px / 1 &quot;Open Sans&quot;, BrianneTod; text-align: center; text-shadow: rgb(0, 0, 0) 1px 1px;">PVZ Beta Modified</button>
 </div>
 </html>
 
