--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ body {
 <div align="center">
 </div>
 <div align="center" style="position: relative; top: 60px">
-<button onclick="window.location.href='https://gamejolt.com/games/OPPVZ/865144/'" id="https://gamejolt.com/games/OPPVZ/865144/" style="background: linear-gradient(rgb(85, 186, 151), rgb(69, 143, 130)); border: 1px solid rgb(65, 141, 168); border-radius: 11px; padding: 20px 30px; color: rgb(255, 255, 255); display: inline-block; font: 26px / 1 &quot;Open Sans&quot;, BrianneTod; text-align: center; text-shadow: rgb(0, 0, 0) 1px 1px;">PVZ Unknown Edition</button>
+<button onclick="window.location.href='https://gamejolt.com/games/OPPVZ/865144/'" id="https://gamejolt.com/games/OPPVZ/865144/" style="background: linear-gradient(rgb(85, 186, 151), rgb(69, 143, 130)); border: 1px solid rgb(65, 141, 168); border-radius: 11px; padding: 20px 30px; color: rgb(255, 255, 255); display: inline-block; font: 26px / 1 &quot;Open Sans&quot;, BrianneTod; text-align: center; text-shadow: rgb(0, 0, 0) 1px 1px;">PVZ Proditany Edition</button>
 </div>
 </html>	
 
